--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "multer": "^1.4.4",
     "nodemailer": "^6.7.4",
     "pg": "^8.7.3",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+        "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "eslint": "^8.14.0",
