--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "peworld-api",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
-    "engines": {
+  "engines": {
     "node": "v16.14.0"
   },
   "author": "",
@@ -26,7 +25,7 @@
     "nodemailer": "^6.7.4",
     "pg": "^8.7.3",
     "uuid": "^8.3.2",
-        "xss-clean": "^0.1.1"
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "eslint": "^8.14.0",
@@ -34,5 +33,15 @@
     "eslint-plugin-import": "^2.26.0",
     "nodemon": "^2.0.15",
     "xss-clean": "^0.1.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rikakus/Peworld-API.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/rikakus/Peworld-API/issues"
+  },
+  "homepage": "https://github.com/rikakus/Peworld-API#readme",
+  "description": ""
 }
